--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,8 @@
   </head>
 
   <body>
+  <div class="container-fluid" style="background-color: white;">
     <%= yield %>
+  </div>
   </body>
 </html>
