--- a/app/assets/stylesheets/buttons.scss
+++ b/app/assets/stylesheets/buttons.scss
@@ -14,7 +14,7 @@
   margin: 0;
   padding: 10px 20px;
   overflow: visible;
-  border: 2px solid #ffff00;
+  border: 2px solid #00FFFF;
   -webkit-border-radius: 0 100px;
   border-radius: 0 100px;
   font: normal 35px/normal "Times New Roman", Times, serif;
@@ -33,20 +33,22 @@
   -webkit-box-shadow: 5px 10px 5px 5px rgba(0,0,0,0.2);
   box-shadow: 5px 10px 5px 5px rgba(0,0,0,0.2);
   text-shadow: none;
-  -webkit-transition: none;
-  -moz-transition: none;
-  -o-transition: none;
-  transition: none;
-  -webkit-transform: none;
-  transform: none;
+  // -webkit-transition: none;
+  // -moz-transition: none;
+  // -o-transition: none;
+  // transition: none;
+  // -webkit-transform: none;
+  // transform: none;
   -webkit-transform-origin: 50% 50% 0;
   transform-origin: 50% 50% 0;
   
   position: relative;
   top: 0;
-  -webkit-transition: top .25s, box-shadow .25s;
-  transition: top .25s, box-shadow .25s;
+  -webkit-transition: top .25s, box-shadow .25s, color .75s, border-color .75s;
+  transition: top .25s, box-shadow .25s, color .75s, border-color .75s;
   &:hover {
+    border-color: white;
+    color: #00FFFF;
     top: 10px;
     -webkit-box-shadow: 5px 10px 5px 5px rgba(0,0,0,0.2);
     box-shadow: 5px 10px 5px -10px rgba(0,0,0,0.2);
@@ -73,13 +75,13 @@
   z-index: auto;
   width: 225px;
   height: 75px;
-  position: static;
+  //position: static;
   cursor: pointer;
   opacity: 1;
   margin: 0;
   padding: 10px 20px;
   overflow: visible;
-  border: 2px solid #ffff00;
+  border: 2px solid #00FFFF;
   -webkit-border-radius: 0;
   border-radius: 0;
   font: normal 35px/normal "Times New Roman", Times, serif;
@@ -106,6 +108,16 @@
   transform: none;
   -webkit-transform-origin: 50% 50% 0;
   transform-origin: 50% 50% 0;
+  
+  position: relative;
+  top: 0;
+  -webkit-transition: top .25s, box-shadow .25s;
+  transition: top .25s, box-shadow .25s;
+  &:hover {
+    top: 10px;
+    -webkit-box-shadow: 5px 10px 5px 5px rgba(0,0,0,0.2);
+    box-shadow: 5px 10px 5px -10px rgba(0,0,0,0.2);
+  }
 }
 
 
@@ -124,7 +136,8 @@
   margin: 0;
   padding: 10px 20px;
   overflow: visible;
-  border: 2px solid #ffff00;
+  //border: 2px solid #ffff00;
+  border: 2px solid #00FFFF;
   -webkit-border-radius: 0 100px 0 0;
   border-radius: 0 100px 0 0;
   font: normal 35px/normal "Times New Roman", Times, serif;
@@ -151,10 +164,21 @@
   -webkit-transform-origin: 50% 50% 0;
   transform-origin: 50% 50% 0;
   text-align: left;
+  
+  position: relative;
+  top: 0;
+  -webkit-transition: top .25s, box-shadow .25s;
+  transition: top .25s, box-shadow .25s;
+  &:hover {
+    top: 10px;
+    -webkit-box-shadow: 5px 10px 5px 5px rgba(0,0,0,0.2);
+    box-shadow: 5px 10px 5px -10px rgba(0,0,0,0.2);
+  }
 }
 
 .button-whoIam {
   display: inline-block;
+  //display: none;
   -webkit-box-sizing: content-box;
   -moz-box-sizing: content-box;
   box-sizing: content-box;
@@ -168,7 +192,7 @@
   margin: 0;
   padding: 10px 20px;
   overflow: visible;
-  border: 2px solid #ffff00;
+  border: 2px solid #00FFFF;
   -webkit-border-radius: 100px 0 0;
   border-radius: 100px 0 0;
   font: normal 35px/normal "Times New Roman", Times, serif;
@@ -195,6 +219,16 @@
   transform: none;
   -webkit-transform-origin: 50% 50% 0;
   transform-origin: 50% 50% 0;
+  
+  position: relative;
+  top: 0;
+  -webkit-transition: top .25s, box-shadow .25s;
+  transition: top .25s, box-shadow .25s;
+  &:hover {
+    top: 10px;
+    -webkit-box-shadow: 5px 10px 5px 5px rgba(0,0,0,0.2);
+    box-shadow: 5px 10px 5px -10px rgba(0,0,0,0.2);
+  }
 }
 
 #trapezoid {
