--- a/app/views/home/main.html.erb
+++ b/app/views/home/main.html.erb
@@ -1,7 +1,8 @@
 <!--<div class="row main">-->
 <!--<div class="col-xs-12">-->
 <!--<div class="header-background">-->
-<header>
+<header id="large-header" class="large-header">
+  <canvas id="demo-canvas" style="position: absolute;"></canvas>
   <%= render "home/header/header" %>
 </header>
 <!--</div>.header-background-->
