--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-  <div class="container-fluid" style="background-color: white;">
+  <div class="container-fluid">
     <%= yield %>
   </div>
   </body>
