Add neon effect to button

--- a/app/views/home/header/_header.html.erb
+++ b/app/views/home/header/_header.html.erb
@@ -2,7 +2,7 @@
 
 <div class="row header">
 <div class="col-xs-12">
-  <div class="row">
+  <div class="row" style="margin-bottom: 20px;">
     <div class="col-xs-12">
       <h1 align="center">ARE YOU LOOKING FOR A WEB DEVELOPER?</h1>
     </div>
