--- a/app/assets/stylesheets/buttons.scss
+++ b/app/assets/stylesheets/buttons.scss
@@ -97,8 +97,10 @@
   background-clip: border-box;
   -webkit-background-size: auto auto;
   background-size: auto auto;
-  -webkit-box-shadow: 0 10px 5px 5px rgba(0,0,0,0.2) ;
-  box-shadow: 0 10px 5px 5px rgba(0,0,0,0.2) ;
+  //-webkit-box-shadow: 0 10px 5px 5px rgba(0,0,0,0.2) ;
+  //box-shadow: 0 10px 5px 5px rgba(0,0,0,0.2) ;
+  -webkit-box-shadow: 0 0 10px rgba(255,255,255,1), 0 0 40px #00ffff;
+  box-shadow: 0 0 10px rgba(255,255,255,1), 0 0 40px #00ffff;
   text-shadow: none;
   -webkit-transition: none;
   -moz-transition: none;
@@ -111,9 +113,11 @@
   
   position: relative;
   top: 0;
-  -webkit-transition: top .25s, box-shadow .25s;
-  transition: top .25s, box-shadow .25s;
+  -webkit-transition: top .25s, box-shadow .25s, color .75s, border-color .75s;
+  transition: top .25s, box-shadow .25s, color .75s, border-color .75s;
   &:hover {
+    border-color: white;
+    color: #00FFFF;
     top: 10px;
     -webkit-box-shadow: 5px 10px 5px 5px rgba(0,0,0,0.2);
     box-shadow: 5px 10px 5px -10px rgba(0,0,0,0.2);
@@ -167,9 +171,11 @@
   
   position: relative;
   top: 0;
-  -webkit-transition: top .25s, box-shadow .25s;
-  transition: top .25s, box-shadow .25s;
+  -webkit-transition: top .25s, box-shadow .25s, color .75s, border-color .75s;
+  transition: top .25s, box-shadow .25s, color .75s, border-color .75s;
   &:hover {
+    border-color: white;
+    color: #00FFFF;
     top: 10px;
     -webkit-box-shadow: 5px 10px 5px 5px rgba(0,0,0,0.2);
     box-shadow: 5px 10px 5px -10px rgba(0,0,0,0.2);
@@ -210,31 +216,18 @@
   background-size: auto auto;
   -webkit-box-shadow: -10px 10px 5px 5px rgba(0,0,0,0.2) ;
   box-shadow: -10px 10px 5px 5px rgba(0,0,0,0.2) ;
-  text-shadow: none;
-  -webkit-transition: none;
-  -moz-transition: none;
-  -o-transition: none;
-  transition: none;
-  -webkit-transform: none;
-  transform: none;
   -webkit-transform-origin: 50% 50% 0;
   transform-origin: 50% 50% 0;
   
   position: relative;
   top: 0;
-  -webkit-transition: top .25s, box-shadow .25s;
-  transition: top .25s, box-shadow .25s;
+  -webkit-transition: top .25s, box-shadow .25s, color .75s, border-color .75s;
+  transition: top .25s, box-shadow .25s, color .75s, border-color .75s;
   &:hover {
+    border-color: white;
+    color: #00FFFF;
     top: 10px;
     -webkit-box-shadow: 5px 10px 5px 5px rgba(0,0,0,0.2);
     box-shadow: 5px 10px 5px -10px rgba(0,0,0,0.2);
   }
-}
-
-#trapezoid {
-	border-bottom: 100px solid red;
-	border-left: 50px solid transparent;
-	border-right: 50px solid transparent;
-	height: 0;
-	width: 100px;
 }
