--- a/app/views/home/main.html.erb
+++ b/app/views/home/main.html.erb
@@ -1,10 +1,5 @@
-<!--<div class="row main">-->
-<!--<div class="col-xs-12">-->
-<!--<div class="header-background">-->
-<header id="large-header" class="large-header">
-  <canvas id="demo-canvas" style="position: absolute;"></canvas>
-  <%= render "home/header/header" %>
-</header>
-<!--</div>.header-background-->
-<!--</div>-->
-<!--</div>.row .main-->
+<div class="row">
+  <div class="col-xs-12">
+    WELL WELL
+  </div>
+</div>
