--- a/app/assets/stylesheets/fonts.scss.erb
+++ b/app/assets/stylesheets/fonts.scss.erb
@@ -3,11 +3,22 @@
 @font-face { font-family: QuickSandLight; src: url("<%= asset_path('Quicksand-Light.otf') %>"); }
 @font-face { font-family: QuickSandRegular; src: url("<%= asset_path('Quicksand-Regular.otf') %>"); }
 
-h1, h4, button {
+a {
+  color: white !important;
+  -webkit-transition: color .75s;
+  transition: color .75s;
+  
+  &:hover {
+    color: #00FFFF !important;
+    text-decoration: none !important;
+  }
+}
+
+h1, h3, h4, button {
   font-family: QuickSandRegular !important;
 }
 
-h1, h4 {
+h1, h3, h4 {
   -webkit-transition: color .75s;
   transition: color .75s;
   
