--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -1,4 +1,16 @@
 header {
   background-color: black;
-  height: 600px;
 }
+
+// .hr-neon {
+//   border:none;
+//   height: 20px;
+// 	width: 90%;
+// 	height: 50px;
+// 	margin-top: 0;
+// 	border-bottom: 1px solid white;
+// 	//box-shadow: 0 20px 20px -20px gray;
+// 	-webkit-box-shadow: 0 0 10px rgba(255,255,255,1), 0 0 40px #00ffff;
+//   box-shadow: 0 20px 20px -20px rgba(255,255,255,1), 0 20px 20px -20px #00ffff;
+//   margin: -50px auto 10px; 
+// }
