--- a/app/views/home/header/_header.html.erb
+++ b/app/views/home/header/_header.html.erb
@@ -1,5 +1,21 @@
 <%= render "home/header/header_top" %>
 
+<% intro1 = "I'm a programmer that has basic and solid knowledge of Ruby
+  on Rails framework for web developing. I have previous experience completing two
+  courses in Udemy that included normal backend content and another to learn
+  Behavior Driven Development (BDD) to have good practices testing features.
+  I also read the " %>
+<% intro2 = " from Michael Hartl. I have enough understanding of SQL language, experience with
+  PostgreSQL, MySQL and SQLite. Other known languages: Java, C, Pascal." %>
+
+<% what_I_do = "I'm specializing in developing web pages with the Ruby on Rails
+  framework. I follow the Don't Repeat Yourself (DRY) phrase to avoid repeating
+  code. I also work using RSpec, Capybara and Guard for test development. I always
+  like to learn more, so I'm not limited to what I know now. I learned BDD to
+  improve my backend skills, now I'm learning Angular 4 to do the same with the
+  frontend ones. To see a little of what I can do, see my portfolio section." %>
+<% what_I_do2 = "I can make desktop apps with Java and C too." %>
+
 <div class="row header">
 <div class="col-xs-12">
   <div class="row" style="margin-bottom: 20px;">
@@ -26,5 +42,22 @@
     </div>
   </div>
   
+  <div class="row">
+    <div class="col-xs-offset-1 col-xs-10">
+      <h3 align="justify" class="intro" style="margin-top: 30px;">
+        &nbsp;&nbsp;&nbsp;&nbsp;
+        <%= intro1 %>
+        <%= link_to "Rails Tutorial online book", 'https://www.railstutorial.org/', target: :_blank %>
+        <%= intro2 %>
+      </h3>
+      
+      <h3 align="justify" class="intro2" style="margin-top: 30px;">
+        &nbsp;&nbsp;&nbsp;&nbsp;
+        <%= what_I_do %>
+        <br><br>
+        <%= what_I_do2 %>
+      </h3>
+    </div>
+  </div>
 </div>
 </div><!--.row .header-->
