--- a/app/views/home/header/_header_top.html.erb
+++ b/app/views/home/header/_header_top.html.erb
@@ -1,8 +1,15 @@
 <div class="row header-top">
-  <div class="col-xs-6">
+  <div class="col-xs-4">
     <h4>JESÚS DI BARI</h4>
   </div>
-  <div class="col-xs-6">
-    <h4 align="right">CONTACT</h4>
+  <div class="col-xs-8">
+    <h4 align="right">
+      <!--<span class="contact">CONTACT</span>-->
+      <span class="skype"><%= link_to fa_icon("skype"), "#" %>iijbari</span>
+      <span class="telegram"><%= link_to fa_icon("telegram"), "#" %>JesusDiByte</span>
+      <span class="github"><%= link_to fa_icon("github"), "https://github.com/iijbari", target: :_blank %></span>
+      <span class="facebook"><%= link_to fa_icon("facebook-square"), "https://www.facebook.com/The.Glitcher", target: :_blank %></span>
+      <span class="twitter"><%= link_to fa_icon("twitter"), "https://twitter.com/JesusDiByte", target: :_blank %></span>
+    </h4>
   </div>
 </div><!--.row .top-header-->
