Add projects to portfolio

--- a/app/views/home/header/_header.html.erb
+++ b/app/views/home/header/_header.html.erb
@@ -13,7 +13,7 @@
   code. I also work using RSpec, Capybara and Guard for test development. I always
   like to learn more, so I'm not limited to what I know now. I learned BDD to
   improve my backend skills, now I'm learning Angular 4 to do the same with the
-  frontend ones. To see a little of what I can do, see my portfolio section." %>
+  frontend ones. To see a little of what I can do, see my portfolio." %>
 <% what_I_do2 = "I can make desktop apps with Java and C too." %>
 
 <div class="row header">
