--- a/app/views/home/main.html.erb
+++ b/app/views/home/main.html.erb
@@ -1,5 +1,50 @@
+<div class="row" align="center">
+  <div class="col-xs-4">
+    <h2>BLOG</h2>
+  </div>
+  <div class="col-xs-4">
+    <h2>PROJECT MANAGER</h2>
+  </div>
+  <div class="col-xs-4">
+    <h2>FINANCE TRACKER</h2>
+  </div>
+</div>
+
 <div class="row">
-  <div class="col-xs-12">
-    WELL WELL
+  <div class="col-xs-4">
+    <div class="parent-work">
+      <div class="child-work child-work-overlay work1">
+        <span class="span-work">
+          <%= link_to "Go to project page", 'https://alpha-blog-di-bari.herokuapp.com/articles',
+            target: :_blank %>
+        </span>
+        <!--<button class="btn btn-danger button-work" data-toggle="modal" data-target="#saasModal">-->
+        <!--  See description-->
+        <!--</button>-->
+      </div>
+    </div>
+  </div>
+  <div class="col-xs-4">
+    <div class="parent-work">
+      <div class="child-work child-work-overlay work2">
+        <span class="span-work">
+          <%= link_to "Go to project page", 'https://saas-app-dibari.herokuapp.com/',
+            target: :_blank %>
+        </span>
+        <!--<button class="btn btn-danger button-work" data-toggle="modal" data-target="#saasModal">-->
+        <!--  See description-->
+        <!--</button>-->
+      </div>
+    </div>
+  </div>
+  <div class="col-xs-4">
+    <div class="parent-work">
+      <div class="child-work child-work-overlay work3">
+        <span class="span-work">
+          <%= link_to "Go to project page", 'https://finance-tracker-di-bari.herokuapp.com',
+            target: :_blank %>
+        </span>
+      </div>
+    </div>
   </div>
 </div>
