--- a/app/assets/stylesheets/fonts.scss.erb
+++ b/app/assets/stylesheets/fonts.scss.erb
@@ -14,11 +14,11 @@ a {
   }
 }
 
-h1, h3, h4, button {
+h1, h2, h3, h4, button {
   font-family: QuickSandRegular !important;
 }
 
-h1, h3, h4 {
+h1, h2, h3, h4 {
   -webkit-transition: color .75s;
   transition: color .75s;
   
