--- a/app/views/home/main.html.erb
+++ b/app/views/home/main.html.erb
@@ -15,7 +15,7 @@
     <div class="parent-work">
       <div class="child-work child-work-overlay work1">
         <span class="span-work">
-          <button class="btn btn-info button-work" data-toggle="modal" data-target="#saasModal">
+          <button class="btn btn-info button-work" data-toggle="modal" data-target="#blogModal">
             See description
           </button>
           <br>
@@ -29,12 +29,13 @@
     <div class="parent-work">
       <div class="child-work child-work-overlay work2">
         <span class="span-work">
+          <button class="btn btn-info button-work" data-toggle="modal" data-target="#saasModal">
+            See description
+          </button>
+          <br>
           <%= link_to "Go to project page", 'https://saas-app-dibari.herokuapp.com/',
             target: :_blank %>
         </span>
-        <!--<button class="btn btn-danger button-work" data-toggle="modal" data-target="#saasModal">-->
-        <!--  See description-->
-        <!--</button>-->
       </div>
     </div>
   </div>
@@ -42,6 +43,10 @@
     <div class="parent-work">
       <div class="child-work child-work-overlay work3">
         <span class="span-work">
+          <button class="btn btn-info button-work" data-toggle="modal" data-target="#financeModal">
+            See description
+          </button>
+          <br>
           <%= link_to "Go to project page", 'https://finance-tracker-di-bari.herokuapp.com',
             target: :_blank %>
         </span>
@@ -64,12 +69,13 @@
     <div class="parent-work">
       <div class="child-work child-work-overlay work4">
         <span class="span-work">
+          <button class="btn btn-info button-work" data-toggle="modal" data-target="#mundogamesModal">
+            See description
+          </button>
+          <br>
           <%= link_to "Go to project page", 'https://mundo-games.herokuapp.com/products',
             target: :_blank %>
         </span>
-        <!--<button class="btn btn-danger button-work" data-toggle="modal" data-target="#saasModal">-->
-        <!--  See description-->
-        <!--</button>-->
       </div>
     </div>
   </div>
@@ -77,7 +83,11 @@
     <div class="parent-work">
       <div class="child-work child-work-overlay work5">
         <span class="span-work">
-          See description
+          <button class="btn btn-info button-work" data-toggle="modal" data-target="#bankModal">
+            See description
+          </button>
+          <br>
+          <i>No link available</i>
         </span>
       </div>
     </div>
