--- a/app/assets/stylesheets/buttons.scss
+++ b/app/assets/stylesheets/buttons.scss
@@ -242,18 +242,40 @@
   -moz-transition: color .25s cubic-bezier(0, 0, 0, 0), border-color .25s cubic-bezier(0, 0, 0, 0);
   -o-transition: color .25s cubic-bezier(0, 0, 0, 0), border-color .25s cubic-bezier(0, 0, 0, 0);
   transition: color .25s cubic-bezier(0, 0, 0, 0), border-color .25s cubic-bezier(0, 0, 0, 0);
-}
-
-.button-work:hover {
-  color: white !important;
-  border-color: white !important;
-}
-
-.button-work:active {
-  color: cyan !important;
+  
+  &:hover {
+    color: white !important;
+    border-color: white !important;
+  }
+  
+  &:active {
+    color: cyan !important;
+  }
 }
 
 .close {
   color: white !important;
   opacity: 1 !important;
+}
+
+#scrollTop {
+  border: 2px solid rgba(0,255,255,1) !important;
+  border-bottom-right-radius: 15px !important;
+  border-top-left-radius: 15px !important;
+  position: fixed;
+  bottom: 40px;
+  right: 10px;
+  z-index: 99;
+  
+  color: rgba(0,255,255,1) !important;
+  background: rgba(0,0,0,0) !important;
+  -webkit-transition: color .25s cubic-bezier(0, 0, 0, 0), border-color .25s cubic-bezier(0, 0, 0, 0), opacity .25s ease-out;
+  -moz-transition: color .25s cubic-bezier(0, 0, 0, 0), border-color .25s cubic-bezier(0, 0, 0, 0), opacity .25s ease-out;
+  -o-transition: color .25s cubic-bezier(0, 0, 0, 0), border-color .25s cubic-bezier(0, 0, 0, 0), opacity .25s ease-out;
+  transition: color .25s cubic-bezier(0, 0, 0, 0), border-color .25s cubic-bezier(0, 0, 0, 0), opacity .25s ease-out;
+  
+  &:hover {
+    color: white !important;
+    border-color: white !important;
+  }
 }
