--- a/app/assets/stylesheets/shared.scss
+++ b/app/assets/stylesheets/shared.scss
@@ -1,5 +1,25 @@
+header {
+  background-color: black;
+  border-bottom: solid 1px cyan;
+  box-shadow: 0 0 10px 1px cyan;
+  max-height: 654px;
+  min-height: 100%;
+}
+
+.container-fluid {
+  //border-radius: 5px;
+  //margin: 10px !important;
+  padding: 0px !important;
+}
+
+.row {
+  margin-left: 0px !important;
+  margin-right: 0px !important;
+}
+
 body {
-  background-color: #070719 !important;
+  //background-color: #070719 !important;
+  background-color: black !important;
   color: white !important;
 }
 
@@ -10,4 +30,19 @@ main {
   background-size: cover;
   //height: 800px;
   height: 100%;
+  padding-left: 45px;
+  padding-right: 45px;
 }
+
+// .hr-neon {
+//   border:none;
+//   height: 20px;
+// 	width: 90%;
+// 	height: 50px;
+// 	margin-top: 0;
+// 	border-bottom: 1px solid white;
+// 	//box-shadow: 0 20px 20px -20px gray;
+// 	-webkit-box-shadow: 0 0 10px rgba(255,255,255,1), 0 0 40px #00ffff;
+//   box-shadow: 0 20px 20px -20px rgba(255,255,255,1), 0 20px 20px -20px #00ffff;
+//   margin: -50px auto 10px; 
+// }
