--- a/app/views/home/_modals.html.erb
+++ b/app/views/home/_modals.html.erb
@@ -1,3 +1,28 @@
+<div class="modal fade" id="blogModal" role="dialog">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h3 class="modal-title">BLOG</h3>
+      </div>
+      <div class="modal-body">
+        <h4>
+          &nbsp;&nbsp;&nbsp;&nbsp;
+          This is a web application where the user can create articles with a
+          title and body, and add categories to them.
+          <br><br>
+          &nbsp;&nbsp;&nbsp;&nbsp;
+          This was an application made following the Michael Hartl's Ruby on Rails
+          Tutorial Book.
+        </h4>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
 <div class="modal fade" id="saasModal" role="dialog">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -16,6 +41,90 @@
           The money reception is made thanks to Stripe API.<br>
           &nbsp;&nbsp;&nbsp;&nbsp;
           The file storage is possible thanks to Amazon Web Services.
+        </h4>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade" id="financeModal" role="dialog">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h3 class="modal-title">FINANCE TRACKER</h3>
+      </div>
+      <div class="modal-body">
+        <h4>
+          &nbsp;&nbsp;&nbsp;&nbsp;
+          With this application you can search for stocks, know their company name and current price.
+        </h4>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade" id="mundogamesModal" role="dialog">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h3 class="modal-title">MUNDO GAMES</h3>
+      </div>
+      <div class="modal-body">
+        <h4>
+          &nbsp;&nbsp;&nbsp;&nbsp;
+          A web page where you can see a videogame shop catalog: consoles, games,
+          accessories, you can look for the price, usage and description.
+          <br><br>
+          &nbsp;&nbsp;&nbsp;&nbsp;
+          A user can ask for an event, so the company can organize parties for
+          people of all ages. The user can select a day, hour and place, which
+          games and consoles he does want for the party/event, and then the
+          administrator will get a notification with all that information.
+          <br><br>
+          &nbsp;&nbsp;&nbsp;&nbsp;
+          It's in Spanish. The page was not finished because of some internal problems.
+        </h4>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade" id="bankModal" role="dialog">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h3 class="modal-title">BANK TASKS</h3>
+      </div>
+      <div class="modal-body">
+        <h4>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          A client can create an administrator who in turn can create a secondary
+          user. The client can assign roles to the administrator like credit card payments, bank transfers and so on.
+          <br><br>
+          &nbsp;&nbsp;&nbsp;&nbsp;
+          A secondary user can only do tasks approved from 2 or more administrators.
+          <br><br>
+          &nbsp;&nbsp;&nbsp;
+          The system can generate a coordinates card and create secret questions.
+          <br><br>
+          &nbsp;&nbsp;&nbsp;&nbsp;
+          It was a project of a semester in my university. My work team consisted
+          of 3 students including me.
+          <br><br>
+          &nbsp;&nbsp;&nbsp;&nbsp;
+          Everything was virtual: no real money transaction can be made.
         </h4>
       </div>
       <div class="modal-footer">
