--- a/app/views/home/main.html.erb
+++ b/app/views/home/main.html.erb
@@ -1,97 +1,7 @@
-<div class="row" align="center">
-  <div class="col-xs-4">
-    <h2>BLOG</h2>
-  </div>
-  <div class="col-xs-4">
-    <h2>PROJECT MANAGER</h2>
-  </div>
-  <div class="col-xs-4">
-    <h2>FINANCE TRACKER</h2>
-  </div>
+<div class="portfolio">
+  <%= render "home/main/portfolio" %>
 </div>
 
-<div class="row">
-  <div class="col-xs-4">
-    <div class="parent-work">
-      <div class="child-work child-work-overlay work1">
-        <span class="span-work">
-          <button class="btn btn-info button-work" data-toggle="modal" data-target="#blogModal">
-            See description
-          </button>
-          <br>
-          <%= link_to "Go to project page", 'https://alpha-blog-di-bari.herokuapp.com/articles',
-            target: :_blank %>
-        </span>
-      </div>
-    </div>
-  </div>
-  <div class="col-xs-4">
-    <div class="parent-work">
-      <div class="child-work child-work-overlay work2">
-        <span class="span-work">
-          <button class="btn btn-info button-work" data-toggle="modal" data-target="#saasModal">
-            See description
-          </button>
-          <br>
-          <%= link_to "Go to project page", 'https://saas-app-dibari.herokuapp.com/',
-            target: :_blank %>
-        </span>
-      </div>
-    </div>
-  </div>
-  <div class="col-xs-4">
-    <div class="parent-work">
-      <div class="child-work child-work-overlay work3">
-        <span class="span-work">
-          <button class="btn btn-info button-work" data-toggle="modal" data-target="#financeModal">
-            See description
-          </button>
-          <br>
-          <%= link_to "Go to project page", 'https://finance-tracker-di-bari.herokuapp.com',
-            target: :_blank %>
-        </span>
-      </div>
-    </div>
-  </div>
+<div class="certificates">
+  <%= render "home/main/certificates" %>
 </div>
-
-<div class="row" align="center">
-  <div class="col-xs-4">
-    <h2>MUNDO GAMES</h2>
-  </div>
-  <div class="col-xs-4">
-    <h2>BANK MANAGEMENT</h2>
-  </div>
-</div>
-
-<div class="row">
-  <div class="col-xs-4">
-    <div class="parent-work">
-      <div class="child-work child-work-overlay work4">
-        <span class="span-work">
-          <button class="btn btn-info button-work" data-toggle="modal" data-target="#mundogamesModal">
-            See description
-          </button>
-          <br>
-          <%= link_to "Go to project page", 'https://mundo-games.herokuapp.com/products',
-            target: :_blank %>
-        </span>
-      </div>
-    </div>
-  </div>
-  <div class="col-xs-4">
-    <div class="parent-work">
-      <div class="child-work child-work-overlay work5">
-        <span class="span-work">
-          <button class="btn btn-info button-work" data-toggle="modal" data-target="#bankModal">
-            See description
-          </button>
-          <br>
-          <i>No link available</i>
-        </span>
-      </div>
-    </div>
-  </div>
-</div>
-
-<%= render "home/modals" %>
