--- a/app/assets/stylesheets/portfolio.scss
+++ b/app/assets/stylesheets/portfolio.scss
@@ -1,3 +1,15 @@
+.portfolio {
+  background-image: image-url('rails.jpg');
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
+  //height: 800px;
+  height: 100%;
+  padding-left: 45px;
+  padding-right: 45px;
+  padding-bottom: 30px;
+}
+
 .child-work {
   width: 100%;
   height: 100%;
