--- a/app/views/home/header/_header_top.html.erb
+++ b/app/views/home/header/_header_top.html.erb
@@ -5,6 +5,9 @@
   <div class="col-xs-8">
     <h4 align="right">
       <!--<span class="contact">CONTACT</span>-->
+      <span><%= fa_icon "envelope" %></span>
+      <span><%= fa_icon "arrow-right" %></span>
+      &nbsp;&nbsp;
       <span class="skype"><%= link_to fa_icon("skype"), "#" %>iijbari</span>
       <span class="telegram"><%= link_to fa_icon("telegram"), "#" %>JesusDiByte</span>
       <span class="github"><%= link_to fa_icon("github"), "https://github.com/iijbari", target: :_blank %></span>
