--- a/app/views/home/main/_portfolio.html.erb
+++ b/app/views/home/main/_portfolio.html.erb
@@ -1,3 +1,9 @@
+<div class="row">
+  <div class="col-xs-12">
+    <h1 align="center">PORTFOLIO</h1>
+  </div>
+</div>
+
 <div class="row" align="center">
   <div class="col-xs-4">
     <h2>BLOG</h2>
