--- a/app/views/home/main.html.erb
+++ b/app/views/home/main.html.erb
@@ -5,3 +5,7 @@
 <div class="certificates">
   <%= render "home/main/certificates" %>
 </div>
+
+<div class="tools">
+  <%= render "home/main/tools" %>
+</div>
