--- a/app/assets/stylesheets/certificates.scss
+++ b/app/assets/stylesheets/certificates.scss
@@ -4,6 +4,7 @@
   padding-left: 45px;
   padding-right: 45px;
   padding-bottom: 30px;
+  border-bottom: solid 1px cyan;
   border-top: solid 1px cyan;
   box-shadow: 0 0 10px 1px cyan;
 }
