Add secondary tools and animated background

--- a/app/views/home/main.html.erb
+++ b/app/views/home/main.html.erb
@@ -7,5 +7,11 @@
 </div>
 
 <div class="tools">
-  <%= render "home/main/tools" %>
+  <div class="sky">
+    <div class="stars"></div>
+    <div class="stars1"></div>
+    <div class="stars2"></div>
+    <div class="shooting-stars"></div>
+    <%= render "home/main/tools" %>
+  </div>
 </div>
