--- a/app/views/home/main/_tools.html.erb
+++ b/app/views/home/main/_tools.html.erb
@@ -11,7 +11,7 @@
     <h1>GIT</h1>
   </div>
   <div class="col-xs-3">
-    <h1>CSS FRAMEWORKS</h1>
+    <h1 style="margin-bottom: 20px;">CSS FRAMEWORKS</h1>
   </div>
   <div class="col-xs-3">
     <h1>DATA BASES</h1>
@@ -38,5 +38,32 @@
   <div class="col-xs-3">
     <%= image_tag 'tools/sendgrid.png' %>
     <%= image_tag 'tools/stripe.png' %>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-xs-12">
+    <h2 align="center">OTHER TOOLS I HAVE WORKED WITH:</h2>
+  </div>
+</div>
+
+<div align="center" class="row tools-row-2">
+  <div class="col-xs-2">
+    <%= image_tag 'tools/html5.png' %>
+  </div>
+  <div class="col-xs-2">
+    <%= image_tag 'tools/css3.png', style: "width: 131px;" %>
+  </div>
+  <div class="col-xs-2">
+    <%= image_tag 'tools/javascript.png' %>
+  </div>
+  <div class="col-xs-2">
+    <%= image_tag 'tools/jquery.png', style: "position: relative; top: 75px;" %>
+  </div>
+  <div class="col-xs-2">
+    <%= image_tag 'tools/heroku.png' %>
+  </div>
+  <div class="col-xs-2">
+    <%= image_tag 'tools/ruby-and-rails.png' %>
   </div>
 </div>
