--- a/app/views/home/main/_modals.html.erb
+++ b/app/views/home/main/_modals.html.erb
@@ -1,6 +1,7 @@
 <div class="modal fade" id="blogModal" role="dialog">
   <div class="modal-dialog">
-    <div class="modal-content">
+    <div class="modal-content animateme">
+      <%= render "home/main/modal_background" %>
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
         <h3 class="modal-title">BLOG</h3>
@@ -25,7 +26,8 @@
 
 <div class="modal fade" id="saasModal" role="dialog">
   <div class="modal-dialog">
-    <div class="modal-content">
+    <div class="modal-content animateme">
+      <%= render "home/main/modal_background" %>
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
         <h3 class="modal-title">PROJECT MANAGEMENT</h3>
@@ -52,7 +54,8 @@
 
 <div class="modal fade" id="financeModal" role="dialog">
   <div class="modal-dialog">
-    <div class="modal-content">
+    <div class="modal-content animateme">
+      <%= render "home/main/modal_background" %>
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
         <h3 class="modal-title">FINANCE TRACKER</h3>
@@ -72,7 +75,8 @@
 
 <div class="modal fade" id="mundogamesModal" role="dialog">
   <div class="modal-dialog">
-    <div class="modal-content">
+    <div class="modal-content animateme">
+      <%= render "home/main/modal_background" %>
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
         <h3 class="modal-title">MUNDO GAMES</h3>
@@ -102,7 +106,8 @@
 
 <div class="modal fade" id="bankModal" role="dialog">
   <div class="modal-dialog">
-    <div class="modal-content">
+    <div class="modal-content animateme">
+      <%= render "home/main/modal_background" %>
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
         <h3 class="modal-title">BANK TASKS</h3>
