--- a/app/assets/stylesheets/shared.scss
+++ b/app/assets/stylesheets/shared.scss
@@ -23,6 +23,12 @@ body {
   color: white !important;
 }
 
+footer {
+  border-top: solid 1px cyan;
+  box-shadow: 0 0 10px 1px cyan;
+  position: relative;
+}
+
 // .hr-neon {
 //   border:none;
 //   height: 20px;
