--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,7 @@
         <%= yield %>
       </main>
       <footer>
+        <%= render "home/main/footer" %>
         <button class="btn btn-info" id="scrollTop" title="Go to top">
           <%= fa_icon("chevron-up") %>
         </button>
