--- a/app/assets/stylesheets/portfolio.scss
+++ b/app/assets/stylesheets/portfolio.scss
@@ -1,5 +1,5 @@
 .portfolio {
-  background-image: image-url('rails.jpg');
+  background-image: image-url("rails.jpg");
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: cover;
@@ -8,6 +8,16 @@
   padding-left: 45px;
   padding-right: 45px;
   padding-bottom: 30px;
+}
+
+.upwork-title {
+  // background-image: image-url("portfolio/upwork.png");
+  // background-size: cover;
+  // height: 100px;
+  position: relative;
+  height: 100px;
+  margin-bottom: -25px;
+  margin-top: -20px;
 }
 
 .child-work {
