--- a/app/assets/stylesheets/tools.scss
+++ b/app/assets/stylesheets/tools.scss
@@ -1,4 +1,5 @@
 .tools {
+  //background-color: #CEF6F5;
   padding-left: 45px;
   padding-right: 45px;
   padding-bottom: 30px;
@@ -6,23 +7,37 @@
   //z-index: -1;
 }
 
-.tools-row .col-xs-3 {
+.tools-row, .tools-row-2 {
   border-radius: 20px;
+  background-color: rgba(255, 255, 255, 0.8);
+  // background: linear-gradient(to bottom, rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.8), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0));
+  // background: -webkit-linear-gradient(bottom, rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.8), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)); /* For Safari 5.1 to 6.0 */
+  // background: -o-linear-gradient(bottom, rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.8), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)); /* For Opera 11.1 to 12.0 */
+  // background: -moz-linear-gradient(top, rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.8), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)); /* For Firefox 3.6 to 15 */
+  // background: linear-gradient(to bottom, rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.8), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0));
+}
+
+.tools-row .col-xs-3 {
+  //border-radius: 20px;
   bottom: 0;
   position: relative;
-  -webkit-transition: bottom .25s, background .25s;
-  transition: bottom .25s, background .25s;
+  
+  -webkit-transition: bottom .25s;
+  transition: bottom .25s;
+  // -webkit-transition: bottom .25s, background .25s;
+  // transition: bottom .25s, background .25s;
   
   &:hover {
-    //border-top-left-radius: 20px;
-    //border-top-right-radius: 20px;
-    background-color: rgba(255,255,255,0.8);
     bottom: 25px;
+  //   //border-top-left-radius: 20px;
+  //   //border-top-right-radius: 20px;
+  //   background-color: rgba(255,255,255,0.8);
+  //   bottom: 25px;
     
-    //background: -webkit-linear-gradient(left, rgba(153, 0, 18, 0.9), rgba(114, 47, 55, 0.9), rgba(255, 204, 204, 0.9)); /* For Safari 5.1 to 6.0 */
-    //background: -o-linear-gradient(right, rgba(153, 0, 18, 0.9), rgba(114, 47, 55, 0.9), rgba(255, 204, 204, 0.9)); /* For Opera 11.1 to 12.0 */
-    //background: -moz-linear-gradient(right, rgba(153, 0, 18, 0.9), rgba(114, 47, 55, 0.9), rgba(255, 204, 204, 0.9)); /* For Firefox 3.6 to 15 */
-    //background: linear-gradient(to bottom, rgba(255, 255, 255, 0.8), rgba(0, 0, 0, 0)); /* Standard syntax */
+  //   //background: -webkit-linear-gradient(left, rgba(153, 0, 18, 0.9), rgba(114, 47, 55, 0.9), rgba(255, 204, 204, 0.9)); /* For Safari 5.1 to 6.0 */
+  //   //background: -o-linear-gradient(right, rgba(153, 0, 18, 0.9), rgba(114, 47, 55, 0.9), rgba(255, 204, 204, 0.9)); /* For Opera 11.1 to 12.0 */
+  //   //background: -moz-linear-gradient(right, rgba(153, 0, 18, 0.9), rgba(114, 47, 55, 0.9), rgba(255, 204, 204, 0.9)); /* For Firefox 3.6 to 15 */
+  //   //background: linear-gradient(to bottom, rgba(255, 255, 255, 0.8), rgba(0, 0, 0, 0)); /* Standard syntax */
   }
 }
 
@@ -33,9 +48,9 @@
 
 .tools-row-2 {
   height: 180px;
-  border-radius: 20px;
-  -webkit-transition: background-color .25s;
-  transition: background-color .25s;
+  //border-radius: 20px;
+  // -webkit-transition: background-color .25s;
+  // transition: background-color .25s;
   
   .col-xs-2 {
     top: 5px;
@@ -45,7 +60,7 @@
     max-height: 170px;
   }
   
-  &:hover {
-    background-color: rgba(255,255,255,0.8);
-  }
+  // &:hover {
+  //   background-color: rgba(255,255,255,0.8);
+  // }
 }
