--- a/app/views/home/main/_portfolio.html.erb
+++ b/app/views/home/main/_portfolio.html.erb
@@ -68,6 +68,9 @@
   <div class="col-xs-4">
     <h2>BANK MANAGEMENT</h2>
   </div>
+  <div class="col-xs-4 upwork-title">
+    <%#= image_tag "portfolio/upwork.png", style: "max-height: 63px" %>
+  </div>
 </div>
 
 <div class="row">
@@ -99,6 +102,7 @@
     </div>
   </div>
   <div align="center" class="col-xs-4">
+    <%= link_to image_tag("portfolio/upwork.png", class: "upwork-title"), "https://www.upwork.com/", target: :_blank %>
     <h2>Hire me!</h2>
     <h4>
       Contact me if you want a web developer.
@@ -108,7 +112,10 @@
       <%= fa_icon "star-o" %> RISING TALENT <%= fa_icon "star-o" %>
       <br>
       You can check my profile out
-      <%= link_to "here", "https://www.upwork.com/o/profiles/users/_~01266cd66664792cfe/",
+      <%#= link_to "here", "https://www.upwork.com/o/profiles/users/_~01266cd66664792cfe/",
+        target: :_blank %>
+      <%= link_to "here",
+        "https://www.upwork.com/signup/create-account/client_contact_freelancer?ciphertext=~01266cd66664792cfe&BYOC",
         target: :_blank %>.
     </h4>
   </div>
