--- a/app/views/home/main/_tools.html.erb
+++ b/app/views/home/main/_tools.html.erb
@@ -22,7 +22,7 @@
 </div>
 
 <div class="row tools-row">
-  <div class="col-xs-3">
+  <div class="col-xs-3" style="padding-top: 25px;">
     <%= image_tag 'tools/bitbucket.png' %>
     <%= image_tag 'tools/github.png' %>
   </div>
