--- a/app/views/home/header/_header.html.erb
+++ b/app/views/home/header/_header.html.erb
@@ -25,8 +25,21 @@
   </div>
   
   <div class="row">
-    <div align="center" class="col-xs-12">
+    <div align="center" class="col-xs-offset-4 col-xs-4">
       <button class="button-yes-header">YES!</button>
+    </div>
+    
+    <div align="center" class="col-xs-3">
+      <h2>
+        <%= link_to "NO?", "https://www.google.com", class: "link-no-header" %>
+        <%#= link_to "Look for anything else in Google" + fa_icon("sign-out"), "https://www.google.com",
+          class: "link-no-header-2", style: "display: none;" %>
+      </h2>
+      <h4>
+        <a class="link-no-header-2" href="https://www.google.com" style="display: none;">
+          Look for anything else in Google <%= fa_icon "sign-out" %>
+        </a>
+      </h4>
     </div>
   </div>
   
