--- a/app/assets/stylesheets/buttons.scss
+++ b/app/assets/stylesheets/buttons.scss
@@ -261,6 +261,14 @@
   opacity: 1 !important;
 }
 
+.flags span button {
+  background-color: transparent;
+  border: none;
+  img {
+    width: 28px;
+  }
+}
+
 #scrollTop {
   border: 2px solid rgba(0,255,255,1) !important;
   border-bottom-right-radius: 15px !important;
