--- a/app/assets/stylesheets/starry-night.sass
+++ b/app/assets/stylesheets/starry-night.sass
@@ -17,7 +17,8 @@ $width: 100%
   width: 100%
   height: 100%
   //background: linear-gradient(to bottom, #020107 0%, #0d6c81 100%)
-  background: linear-gradient(to bottom, rgba(0,0,0,0), rgba(50, 90, 93,1))
+  //background: linear-gradient(to bottom, rgba(0,0,0,0), rgba(50, 90, 93,1))
+  background: black
   
 @function create-stars($n)
 
