--- a/app/views/home/header/_header_top.html.erb
+++ b/app/views/home/header/_header_top.html.erb
@@ -2,7 +2,11 @@
   <div class="col-xs-4">
     <h4>JESÚS DI BARI</h4>
   </div>
-  <div class="col-xs-8">
+  <div align="center" class="col-xs-4 flags">
+    <span><button><%= image_tag "us", class: "flag" %></button></span>
+    <span><button><%= image_tag "es" %></button></span>
+  </div>
+  <div class="col-xs-4">
     <h4 align="right">
       <!--<span class="contact">CONTACT</span>-->
       <span><%= fa_icon "envelope" %></span>
