--- a/app/views/home/main/_footer.html.erb
+++ b/app/views/home/main/_footer.html.erb
@@ -2,7 +2,19 @@
   <div class="col-xs-12">
     <p>
       <%= fa_icon "copyright" %>
-      2017 - Jesús Di Bari
+      2017 - Jesús Di Bari - 
+      <%= fa_icon "heart-o", "data-toggle": "collapse", "data-target": "#test" %>
     </p>
+  </div>
+  
+  <div class="col-xs-offset-1 col-xs-10">
+    <div id="test" class="collapse">
+      <h2 align="center">
+        Una carta para Yoselin Rodrigues
+      </h2>
+      <h3 align="justify" style="color: white; font-family: 'Times New Roman', Times, serif !important;">
+        <%= render "home/main/letter" %>
+      </h3>
+    </div>
   </div>
 </div>
