--- a/app/views/home/main/_portfolio.html.erb
+++ b/app/views/home/main/_portfolio.html.erb
@@ -68,7 +68,7 @@
   <div class="col-xs-4">
     <h2>BANK MANAGEMENT</h2>
   </div>
-  <div class="col-xs-4 upwork-title">
+  <div class="col-xs-4">
     <%#= image_tag "portfolio/upwork.png", style: "max-height: 63px" %>
   </div>
 </div>
