--- a/app/views/home/header/_header_top.html.erb
+++ b/app/views/home/header/_header_top.html.erb
@@ -3,8 +3,8 @@
     <h4>JESÚS DI BARI</h4>
   </div>
   <div align="center" class="col-xs-4 flags">
-    <span><button><%= image_tag "us", class: "flag" %></button></span>
-    <span><button><%= image_tag "es" %></button></span>
+    <span><button><%= image_tag "us.png", class: "flag" %></button></span>
+    <span><button><%= image_tag "es.png" %></button></span>
   </div>
   <div class="col-xs-4">
     <h4 align="right">
