Add heart icon again

--- a/app/views/home/main/_footer.html.erb
+++ b/app/views/home/main/_footer.html.erb
@@ -3,7 +3,7 @@
     <p>
       <%= fa_icon "copyright" %>
       2017 - Jesús Di Bari - 
-      <%#= fa_icon "heart-o", "data-toggle": "collapse", "data-target": "#test" %>
+      <%= fa_icon "heart-o", "data-toggle": "collapse", "data-target": "#test" %>
     </p>
   </div>
   
