--- a/app/views/home/header/_header.html.erb
+++ b/app/views/home/header/_header.html.erb
@@ -1,6 +1,6 @@
 <%= render "home/header/header_top" %>
 
-<% intro1 = "I'm a programmer that has basic and solid knowledge of Ruby
+<% intro1 = "I'm a programmer that has solid knowledge of Ruby
   on Rails framework for web developing. I have previous experience completing two
   courses in Udemy that included normal backend content and another to learn
   Behavior Driven Development (BDD) to have good practices testing features.
